k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-trailers-app
  labels:
    app: movie-trailers
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-trailers
      tier: backend
  template:
    metadata:
      labels:
        app: movie-trailers
        tier: backend
    spec:
      containers:
        - name: movie-trailers-app
          image: movie-trailers:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-config-volume
              mountPath: /app/application.properties
              subPath: application.properties
            - name: assets-volume
              mountPath: /app/assets
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: app-config-volume
          configMap:
            name: app-config
        - name: assets-volume
          emptyDir: { }
