k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-trailers-app
  labels:
    app: movie-trailers
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: movie-trailers
    tier: backend
