k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-trailers-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: movie-trailers.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-trailers-app
                port:
                  number: 8080
